--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
 
                     </div>
                     <!-- developer -->
-                    <div class="flex ">
+                    <div>
                         <div class="headerflex" style="display: flex; justify-content: center; align-items: center; justify-content: space-around;" >
-                            <div style="margin-top: -120px;" >
-                                <img style="max-width:350px;"   src="/images/Blue and Black Modern Professional LinkedIn Profile Picture.png" alt="">
+                            <div class="profile" style="margin-top: 150px;" >
+                                <img style="max-width:350px;"    src="/images/Blue and Black Modern Professional LinkedIn Profile Picture.png" alt="">
                             </div>
 
-                            <div class="col-12 col-md-6">
+                            <div class="col-12 col-md-6 flex" >
                                 <h1
                                     style="font-weight: bold; color: #ffae00; font-family:'Times New Roman', Times, serif">
                                     Mern Stack Developer</h1>
